// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message Description 1`] = `
.c1 {
  color: rgb(73,73,73);
  line-height: 1.5rem;
  font-size: 0.9375rem;
}

.c0 {
  line-height: 0.875rem;
  font-size: 0.8125rem;
}

<p
  className="c0 c1"
>
  Choosing deployment data center
</p>
`;

exports[`Message Message 1`] = `
.c3 {
  color: rgb(73,73,73);
  font-weight: 600;
  line-height: 1.5rem;
  font-size: 0.9375rem;
}

.c5 {
  color: rgb(73,73,73);
  line-height: 1.5rem;
  font-size: 0.9375rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  background-color: rgb(255,255,255);
  box-shadow: 0 0.125rem 0 0 rgba(0,0,0,0.05);
  border: 0.0625rem solid rgb(216,216,216);
  border-radius: 0.1875rem;
  width: 100%;
}

.c1 {
  border-radius: 0.1875rem 0 0 0.1875rem;
  min-width: 0.75rem;
  min-height: 100%;
  background-color: rgb(0,152,88);
}

.c2 {
  padding: 1.125rem 1.125rem;
}

.c4 {
  line-height: 0.875rem;
  font-size: 0.8125rem;
}

<div
  className="c0"
>
  <div
    className="c1"
  />
  <div
    className="c2"
  >
    <h4
      className="c3"
    >
      Choosing deployment data center
    </h4>
    <p
      className="c4 c5"
    >
      Not all data centres have all configurations of instances available. Make sure that you choose the data center that suits your requirements. Learn more
    </p>
  </div>
</div>
`;

exports[`Message Message Error 1`] = `
.c3 {
  color: rgb(73,73,73);
  font-weight: 600;
  line-height: 1.5rem;
  font-size: 0.9375rem;
}

.c5 {
  color: rgb(73,73,73);
  line-height: 1.5rem;
  font-size: 0.9375rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  background-color: rgb(255,255,255);
  box-shadow: 0 0.125rem 0 0 rgba(0,0,0,0.05);
  border: 0.0625rem solid rgb(216,216,216);
  border-radius: 0.1875rem;
  width: 100%;
}

.c1 {
  border-radius: 0.1875rem 0 0 0.1875rem;
  min-width: 0.75rem;
  min-height: 100%;
  background-color: rgb(0,152,88);
  background-color: rgb(210,67,58);
}

.c2 {
  padding: 1.125rem 1.125rem;
}

.c4 {
  line-height: 0.875rem;
  font-size: 0.8125rem;
}

<div
  className="c0"
>
  <div
    className="c1"
  />
  <div
    className="c2"
  >
    <h4
      className="c3"
    >
      Choosing deployment data center
    </h4>
    <p
      className="c4 c5"
    >
      Not all data centres have all configurations of instances available. Make sure that you choose the data center that suits your requirements. Learn more
    </p>
  </div>
</div>
`;

exports[`Message Message Warning 1`] = `
.c3 {
  color: rgb(73,73,73);
  font-weight: 600;
  line-height: 1.5rem;
  font-size: 0.9375rem;
}

.c5 {
  color: rgb(73,73,73);
  line-height: 1.5rem;
  font-size: 0.9375rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  background-color: rgb(255,255,255);
  box-shadow: 0 0.125rem 0 0 rgba(0,0,0,0.05);
  border: 0.0625rem solid rgb(216,216,216);
  border-radius: 0.1875rem;
  width: 100%;
}

.c1 {
  border-radius: 0.1875rem 0 0 0.1875rem;
  min-width: 0.75rem;
  min-height: 100%;
  background-color: rgb(0,152,88);
  background-color: rgb(227,130,0);
}

.c2 {
  padding: 1.125rem 1.125rem;
}

.c4 {
  line-height: 0.875rem;
  font-size: 0.8125rem;
}

<div
  className="c0"
>
  <div
    className="c1"
  />
  <div
    className="c2"
  >
    <h4
      className="c3"
    >
      Choosing deployment data center
    </h4>
    <p
      className="c4 c5"
    >
      Not all data centres have all configurations of instances available. Make sure that you choose the data center that suits your requirements. Learn more
    </p>
  </div>
</div>
`;

exports[`Message Title 1`] = `
.c0 {
  color: rgb(73,73,73);
  font-weight: 600;
  line-height: 1.5rem;
  font-size: 0.9375rem;
}

<h4
  className="c0"
>
  Choosing deployment data center
</h4>
`;
